# python-project-83

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: CC_check.yml
page_analyzer/: __init__.py  app.py  config.py  db.py  sup.py
page_analyzer/template/: index.html
page_analyzer/templates/: base.html  index.html  urls.html  urls_analyze.html
