[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-analyzer project"
authors = ["Vladislav Chekmenev <nahvest@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
validators = "^0.20.0"
requests = "^2.28.2"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.nahvest.api"